# pgming_observations

./: Integrity.txt  README.md  vpu_as.c  vpu_bitcode.c  vpu_io.h  vpu_reg.h  vpu_util.c
Temp/: vpu_as.c  vpu_bitcode.c  vpu_debug.c  vpu_debug.h  vpu_io.c  vpu_io.h  vpu_lib.h  vpu_reg.h  vpu_util.c  vpu_util.h
Temp/vpu_library/: readme.txt
Temp/vpu_library/src/driver/: imx6_vpu_dev.c  imx6_vpu_iodev.h
Temp/vpu_library/src/logs/: vpu_decOpem_log.txt
awk_practice/: argv.awk  arrays.awk  dot.awk  environ.awk  filename.awk  fnr.awk  fs.awk  marks.txt  nf.awk  nr.awk  operators.awk  rlength.awk
c_practice/: .7_string_and_pointers.c.swp  10_sys_pgm_signal.c  11_sys_pgm_pthreads.c  12_sys_pgm_pthreads2.c  13_sys_pgm_sem.c  14_file_exp.c  15_char_cnt_occurance.c  16_add_char_as_specified.c  1_hello_world  1_hello_world.c  3_check_opposite_sign.c  4_min_max.c  5_power_of_2.c  6_not_to_variable.c  7_string_and_pointers.c  8_sys_pgm_exit_handler.c  9_sys_pgm_fork.c  BruteForceStringMatchin.c  Makefile  String.c  Symbol-Blalancing.cpp  arrays.c  bruteForceStringMatching.c  hello  hextBits.c  linkedList.c  octal.c  palindrome.c  pointer.c  recursion.c  secondSmalles.c  sizeof.c  stack.c  structures1.c  unions.c
c_practice/sockets/: client_tcp.c  client_udp.c  ip_addr.c  server_tcp.c  server_udp.c
cmake/: commands.txt
cmake/2_include_directories/: CMakeLists.txt
cmake/3_add_library/: CMakeLists.txt
cmake/4_add_subdirectory/: CMakeLists.txt
cmake/5_target_include_directories/: CMakeLists.txt
cmake/helloworld/: CMakeLists.txt
cmake/helloworld/linker/: MIMX8MQ6xxxJZ_cm4_ram.ld
cmake/helloworld/src/: main.c  startup.S
drivers_practice/1_Hello/: hello_world.c
drivers_practice/2_hello_extended/: Makefile  hello_exten.c
my_setup/: allgo_mail_setup  ubuntu
my_setup/dotfiles/: bashrc_shreyas  shreyas_frisk.zsh-theme  tmux.conf_shreyas  vimrc_shreyas  zshrc_shreyas
my_setup/dotfiles/shreyas_fish/: aliases.fish  config.fish  fish_history  fishd.00224db223b2
my_setup/nvim/: init.lua
my_setup/nvim/lua/custom/plugins/: tagbar.lua
my_setup/nvim/lua/kickstart/plugins/: neo-tree.lua
python/: short_cmd_promt.py
shell_practice/: 00-note.txt  1_hello.sh  2_commands.sh  3_user_variables.sh  4_init_c_file.sh  my_imp_steps_to_set_up_linux.txt  my_vimrc  myvimrc  vimRC-Vikas  vimrc_vikas
tutorials/: arch_installations  bashshell  fishshell  git  shell  tmux  usb  vim  zshell
